# cryptopolis

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  package.json  test.txt  test2.txt
.claude/: launch.json
.github/workflows/: release.yaml
browser-machine/: Dockerfile  package.json
browser-machine/src/: index.ts  util.ts
browser-machine/tests/: map.test.ts
dapp/: .env  .gitignore  Dockerfile  metadata.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
dapp/src/: ifps-uploader.js  index.ts  ipfs-uploader.js  single-mint.js  util.ts
dapp/sui-nft/: mint-nft.js  package-lock.json  package.json
dapp/tests/: clock.test.ts  map.test.ts
micropolis/: CMakeLists.txt  README.md  index.js  module.d.ts  package.json  pnpm-lock.yaml
micropolis/src/: binding.cpp  generate.cpp  micropolis.h  tool.cpp  tool.h
node-micropolis/: CMakeLists.txt  MicropolisEngine.d.ts  README.md  module.d.ts  package.json
node-micropolis/__tests__/: map.test.ts  version.test.ts
node-micropolis/src/: binding.cpp  connect.cpp  generate.h  map_type.h  text.h
web/: .env  Makefile  README.md  cartesi-machine.nelua  cartesi.nelua  codegen.ts  css.d.ts  machine.nelua  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tools.afdesign  tsconfig.json  wagmi.config.ts
web/cartesi-machine-v0.15.2_wasm/lib/: libcartesi-0.15.wasm  libcartesi.wasm
web/graphql/: queries.graphql
web/src/: config.ts
web/src/app/: bridge.tsx  layout.tsx  page.tsx  shell.tsx
web/src/components/: Bridge.tsx  Budget.tsx  CityStats.tsx  Deposit.tsx  Disasters.tsx  (+13 more)
(+32 files in other folders)
